# cinder

./: LICENSE  README.md
api/: Cargo.toml  README.md
api/certs/: key.pem
api/src/: main.rs
api/static/: campuses.geojson.zz
client/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/app/: globals.css
client/src/: App.tsx
client/src/components/: list-item.tsx
client/src/components/ui/: sheet.tsx
ipeds/: .gitignore  Cargo.toml  README.md  rustfmt.toml  years.py
ipeds/src/: main.rs
server/: .gitignore  Cargo.toml  README.md
server/certs/: cert.pem
server/src/: main.rs
server/static/: campuses.geojson.br  campuses.geojson.zst
