[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["multipart", "macros", "http2"] }
axum-server = { version = "0.6.0", features = ["rustls", "tokio-rustls", "rustls-pemfile", "tls-rustls"] }
listenfd = "1.0.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "full"] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
