[package]
name = "ipeds"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.40" }
anyhow = "1.0.81"
async_zip = { version = "0.0.17", features = ["full"] }
clap = { version = "4.5.4", features = [
  "derive",
  "unstable-styles",
  "unicode",
] }
deadpool-postgres = "0.13.0"
futures = "0.3.30"
html5ever = "0.27.0"
human_bytes = { version = "0.4.3", features = [
  "anyhow",
  "fast",
  "build-binary",
] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.2", features = [
  "brotli",
  "deflate",
  "gzip",
  "rustls-tls",
  "rustls-tls-native-roots",
  "rustls-tls-webpki-roots",
  "stream",
] }
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.10", features = ["array-impls"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
which = "6.0.1"
tempfile = { version = "3.10.1", features = ["nightly"] }
tokio-util = { version = "0.7.10", features = ["io"] }

[profile.release]
codegen-units = 1
lto = "fat"
strip = false
